<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_large">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfileImage"
                        android:layout_width="@dimen/profile_image_size"
                        android:layout_height="@dimen/profile_image_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_large"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:src="@drawable/avatar_image_placeholder"
                        app:civ_border_color="@color/primary_color"
                        app:civ_border_width="2dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:hint="@string/hint_nickname"
                        app:boxStrokeColor="@color/primary_color"
                        app:hintTextColor="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_large"
                        android:hint="@string/hint_profession"
                        app:boxStrokeColor="@color/primary_color"
                        app:hintTextColor="@color/primary_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etProfession"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnUpdateProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:background="@drawable/button_primary_background"
                        android:text="@string/btn_update_profile"
                        android:textColor="@color/white"
                        app:backgroundTint="@null" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogout"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/btn_sign_out"
                        android:textColor="@color/error_color"
                        app:strokeColor="@color/error_color" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    <include
        android:id="@+id/bottom_bar"
        layout = "@layout/bottombar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>